# opengl_study

./: CMakeLists.txt
include/: camera.hpp  object.hpp  shader.hpp
include/glad/: glad.h
src/: camera.cpp  glad.c  main.cpp  object.cpp  shader.cpp  test.cpp  vertices.cpp
src/shader/: basic_1.f_shader  basic_1.v_shader  basic_2.f_shader  basic_2.v_shader
